--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,7 @@ python-dotenv==1.0.0
 # Utilities
 python-dateutil==2.8.2
 pytz==2023.3
+
+# Additional Dependencies
+pillow==10.2.0  # Image processing
+python-magic==0.4.27  # File type detection
