--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # FitTwin Platform - Production Dependencies
 
 # Web Framework
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
 python-multipart==0.0.6
 
 # Database
@@ -18,8 +18,8 @@ python-jose[cryptography]==3.3.0
 stripe==7.11.0
 
 # AI & ML
-mediapipe==0.10.9
-crewai==0.1.26
+mediapipe>=0.10.0
+crewai>=0.1.0
 openai==1.10.0
 
 # Data Validation
