--- a/backend/queue-workers/tryon-renderer/package.json
+++ b/backend/queue-workers/tryon-renderer/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "echo \"(skip) no try-on renderer tests yet\"",
+    "test:full": "npm run test"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
