--- a/stack.env.example
+++ b/stack.env.example
@@ -9,3 +9,5 @@ FEATURE_AR_LAB=1
 NEXT_PUBLIC_FEATURE_AR_LAB=1
 NS_LAB_URL=http://localhost:3001/ar-lab
 NS_BRAND_URL=http://localhost:3100
+NS_MEASUREMENTS_API_URL=http://127.0.0.1:8000/api
+NS_MEASUREMENTS_API_KEY=staging-secret-key
