--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start:dev": "nest start --watch",
     "lint": "eslint 'src/**/*.ts'",
     "test": "jest",
+    "test:full": "npm run test",
     "prepare": "husky"
   },
   "dependencies": {
