--- a/frontend/apps/brand-portal/package.json
+++ b/frontend/apps/brand-portal/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "echo \"(skip) brand portal tests not yet implemented\"",
+    "test:full": "npm run test"
   },
   "dependencies": {
     "@fittwin/api-client": "file:../../packages/api-client",
