--- a/frontend/packages/analytics/package.json
+++ b/frontend/packages/analytics/package.json
@@ -9,7 +9,9 @@
     "mapscii": "^0.3.1"
   },
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "echo \"(skip) analytics package has no tests yet\"",
+    "test:full": "npm run test"
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
