--- a/frontend/packages/ui/package.json
+++ b/frontend/packages/ui/package.json
@@ -9,7 +9,9 @@
     "react": "^18.3.1"
   },
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "echo \"(skip) UI package has no tests yet\"",
+    "test:full": "npm run test"
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
