chore(dev): add nodemon hot reload to dev-stack

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint 'src/**/*.ts'",
     "test": "jest",
     "test:full": "npm run test",
-    "prepare": "husky"
+    "prepare": "husky",
+    "backend:dev": "npm run start:dev"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
