--- a/mobile/ios/FitTwinApp/FitTwinApp/Resources/Info.plist
+++ b/mobile/ios/FitTwinApp/FitTwinApp/Resources/Info.plist
@@ -18,8 +18,17 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FITWIN_API_KEY</key>
+	<string>staging-secret-key</string>
+	<key>FITWIN_API_URL</key>
+	<string>http://127.0.0.1:8000</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>FitTwin needs access to the camera to capture measurement photos.</string>
 	<key>NSMicrophoneUsageDescription</key>
@@ -37,11 +46,6 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
