--- a/mobile/ios/FitTwinMeasurePOC/FitTwinMeasure/Info.plist
+++ b/mobile/ios/FitTwinMeasurePOC/FitTwinMeasure/Info.plist
@@ -46,5 +46,14 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>FITWIN_API_URL</key>
+	<string>http://127.0.0.1:8000</string>
+	<key>FITWIN_API_KEY</key>
+	<string>staging-secret-key</string>
 </dict>
 </plist>
