feat: Add Supabase backend integration for cloud measurement storage
- Add SupabaseService.swift with auth and measurement upload
- Update ProcessingView with automatic upload on completion
- Add supabase_schema.sql with measurements table and RLS policies
- Create SUPABASE_SETUP.md with step-by-step setup instructions
- Update SETUP_GUIDE.md with Supabase integration section
- Add CHANGELOG_SUPABASE.md documenting all changes
- Add Supabase pod dependency to Podfile

Features:
- Anonymous authentication for testing
- Automatic measurement upload after processing
- Upload status UI (idle/uploading/success/failed)
- Row Level Security for data isolation
- Support for measurement history and image storage
- Comprehensive error handling and logging

Technical Details:
- 350 lines of Swift code in SupabaseService
- 180 lines of SQL schema with RLS policies
- 2,500 words of setup documentation
- Updated ProcessingView with 60 new lines
- Full async/await Swift concurrency support

Breaking Changes: None (purely additive)

--- a/ios-clean/Podfile
+++ b/ios-clean/Podfile
@@ -8,7 +8,10 @@ target 'FitTwin' do
   # MediaPipe for pose detection
   pod 'MediaPipeTasksVision', '~> 0.10.14'
   
-  # Optional: Alamofire for networking (if needed for backend)
+  # Supabase for backend
+  pod 'Supabase', '~> 2.0'
+  
+  # Optional: Alamofire for networking (if needed for other APIs)
   # pod 'Alamofire', '~> 5.8'
   
 end
